--- a/_sass/_page.scss
+++ b/_sass/_page.scss
@@ -64,6 +64,7 @@
   /* paragraph indents */
   p {
     margin: 0 0 $indent-var;
+    margin-top: 1.4em;
 
     /* sibling indentation*/
     @if $paragraph-indent == true {
