--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -7,7 +7,7 @@ $masthead-height            : 100px;
    Typography
    ========================================================================== */
 
-$doc-font-size              : 16 !default;
+$doc-font-size              : 18px !default;
 
 /* paragraph indention */
 $paragraph-indent           : false !default; // true, false (default)
@@ -28,7 +28,7 @@ $times                      : Times, serif !default;
 $bodoni                     : "Bodoni MT", serif !default;
 $calisto                    : "Calisto MT", serif !default;
 $garamond                   : Garamond, serif !default;
-$roboto                     : "Roboto";
+$roboto                     : "Roboto" !default; 
 
 $global-font-family         : $sans-serif !default;
 $header-font-family         : $sans-serif !default;
@@ -37,10 +37,10 @@ $caption-font-family        : $serif !default;
 /* type scale */
 $type-size-1                : 2.441em !default;  // ~39.056px
 $type-size-2                : 1.953em !default;  // ~31.248px
-$type-size-3                : 1.563em !default;  // ~25.008px
+$type-size-3                : 1.43em !default;  // ~25.008px
 $type-size-4                : 1.25em !default;   // ~20px
 $type-size-5                : 1em !default;      // ~16px
-$type-size-6                : 0.75em !default;   // ~12px
+$type-size-6                : 0.8em !default;   // ~12px
 $type-size-7                : 0.6875em !default; // ~11px
 $type-size-8                : 0.625em !default;  // ~10px
 
@@ -114,9 +114,9 @@ $x-large                    : 1280px !default;
    Grid
    ========================================================================== */
 
-$right-sidebar-width-narrow : 200px !default;
-$right-sidebar-width        : 300px !default;
-$right-sidebar-width-wide   : 400px !default;
+$right-sidebar-width-narrow : 0 !default; //200px
+$right-sidebar-width        : 0 !default; //300px
+$right-sidebar-width-wide   : 0 !default; //300px
 
 
 /*
