--- a/_layouts/single.html
+++ b/_layouts/single.html
@@ -27,8 +27,9 @@ layout: default
       {% unless page.header.overlay_color or page.header.overlay_image %}
         <header>
           {% if page.title %}<h1 class="page__title" itemprop="headline">{{ page.title | markdownify | remove: "<p>" | remove: "</p>" }}</h1>{% endif %}
-          {% if page.read_time %}
-            <p class="page__meta"><i class="fa fa-clock-o" aria-hidden="true"></i> {% include read-time.html %}</p>
+            <p class="page__meta"><i class="fa fa-fw fa-calendar" aria-hidden="true"></i> {{ page.date | date: "%B %d, %Y" }}&nbsp;&nbsp;
+                {% if page.read_time %}
+                <i class="fa fa-clock-o" aria-hidden="true"></i> {% include read-time.html %}</p>
           {% endif %}
         </header>
       {% endunless %}
