--- a/_sass/_archive.scss
+++ b/_sass/_archive.scss
@@ -27,9 +27,10 @@
 .archive__subtitle {
   margin: 1.414em 0 0;
   padding-bottom: 0.5em;
-  font-size: $type-size-5;
+  font-size: $type-size-6;
   color: mix(#fff, $gray, 25%);
-  border-bottom: 1px solid $border-color;
+//  border-bottom: 1px solid $border-color;
+//  margin-bottom: 30px;
 
   + .list__item .archive__item-title {
     margin-top: 0.5em;
@@ -39,6 +40,7 @@
 .archive__item-title {
   margin-bottom: 0.25em;
   font-family: $sans-serif-narrow;
+  margin-top: .3em;
 
   a + a {
     opacity: 0.5;
@@ -49,14 +51,17 @@
 .page__content {
 
   .archive__item-title {
-    margin-top: 1em;
+    margin-top: .3em;
     border-bottom: none;
   }
 }
 
 .archive__item-excerpt {
   margin-top: 0;
-  font-size: $type-size-6;
+  font-size: $type-size-5;
+  border-bottom: 1px solid $border-color;
+  padding-bottom: 0.74em;
+  margin-bottom: 30px;
 
   & + p {
     text-indent: 0;
@@ -65,10 +70,15 @@
 
 .archive__item-teaser {
   border-radius: $border-radius;
+//  margin-top: 40px;
+//  margin-bottom: 10px;
   overflow: hidden;
-  img {
-    width: 100%;
-  }
+  height: 300px;
+  background-size: cover;
+  background-position: center;
+//  img {
+//    width: 100%;
+//  }
 }
 
 .archive__item:hover {
@@ -143,7 +153,7 @@
 
     .archive__item-excerpt {
       display: block;
-      font-size: $type-size-6;
+      font-size: $type-size-5;
     }
   }
 }
