--- a/_sass/_masthead.scss
+++ b/_sass/_masthead.scss
@@ -26,7 +26,7 @@
     display: flex;
     -webkit-box-pack: justify;
      justify-content: space-between;
-    padding: 1em 1em 1em;
+    padding: .3em 0em 0em 0em;
     font-family: $sans-serif-narrow;
 
     @include breakpoint($x-large) {
@@ -53,7 +53,10 @@
   font-weight: bold;
   z-index: 20;
 }
-
+.site-title-custom {
+    margin-right: 0;
+    
+}
 .masthead__menu {
   width: 100%;
 
