--- a/_sass/_sidebar.scss
+++ b/_sass/_sidebar.scss
@@ -78,12 +78,11 @@
   }
 
   img {
-    max-width: 110px;
-    border-radius: 50%;
-
+    max-width: 300px;
+    border-radius: $border-radius;
     @include breakpoint($large) {
       padding: 5px;
-      border: 1px solid $border-color;
+//      border: 1px solid $border-color;
     }
   }
 }
