--- a/_includes/breadcrumbs.html
+++ b/_includes/breadcrumbs.html
@@ -22,17 +22,17 @@
           <a href="{{ site.url }}{{ site.baseurl }}/" itemprop="item" style="display: inline !important;"><span itemprop="name">{{ site.data.ui-text[site.locale].breadcrumb_home_label | default: "home" }}</span></a>
           <meta itemprop="position" content="{{ i }}" />
         </li>
-        <span class="sep">{{ site.data.ui-text[site.locale].breadcrumb_separator | default: "/" }}</span>
       {% endif %}
       {% if forloop.last %}
-        <li class="current">{{ page.title | downcase }}</li>
+      <span class="sep"><br>{{ site.data.ui-text[site.locale].breadcrumb_separator | default: "/" }}</span>
+      <li class="current">{{ page.title | downcase }}</li>
       {% else %}
         {% assign i = i | plus: 1 %}
+        <span class="sep">{{ site.data.ui-text[site.locale].breadcrumb_separator | default: "/" }}</span>
         <li itemprop="itemListElement" itemscope itemtype="http://schema.org/ListItem">
           <a href="{{ crumb | downcase | replace: '%20', '-' | prepend: path_type | prepend: crumb_path | absolute_url }}" itemprop="item"><span itemprop="name">{{ crumb | replace: '-', ' ' | replace: '%20', ' ' }}</span></a>
           <meta itemprop="position" content="{{ i }}" />
         </li>
-        <span class="sep">{{ site.data.ui-text[site.locale].breadcrumb_separator | default: "/" }}</span>
       {% endif %}
     {% endfor %}
   </ol>
