--- a/_layouts/single.html
+++ b/_layouts/single.html
@@ -26,15 +26,16 @@ layout: default
     <div class="page__inner-wrap">
       {% unless page.header.overlay_color or page.header.overlay_image %}
         <header>
-          {% if page.title %}<h1 class="page__title" itemprop="headline">{{ page.title | markdownify | remove: "<p>" | remove: "</p>" }}</h1>{% endif %}
-            <p class="page__meta"><i class="fa fa-fw fa-calendar" aria-hidden="true"></i> {{ page.date | date: "%B %d, %Y" }}&nbsp;&nbsp;
-                {% if page.read_time %}
-                <i class="fa fa-clock-o" aria-hidden="true"></i> {% include read-time.html %}</p>
-          {% endif %}
+          {% if page.title %}{% unless page.title-trigger %}<h1 class="page__title" itemprop="headline">{{ page.title | markdownify | remove: "<p>" | remove: "</p>" }}</h1>{% endunless %}{% endif %}
+            
         </header>
       {% endunless %}
-
+      {% unless page %}
       <section class="page__content" itemprop="text">
+        <h4 class="page__meta"><i class="fa fa-fw fa-calendar" aria-hidden="true"></i> {{ page.date | date: "%B %d, %Y" }}&nbsp;&nbsp;
+                {% if page.read_time %}
+                <i class="fa fa-clock-o" aria-hidden="true"></i> {% include read-time.html %}{% endif %}</h4>
+      {% endunless %}
         {{ content }}
         {% if page.link %}<div><a href="{{ page.link }}" class="btn">{{ site.data.ui-text[site.locale].ext_link_label | default: "Direct Link" }}</a></div>{% endif %}
       </section>
