--- a/_sass/_masthead.scss
+++ b/_sass/_masthead.scss
@@ -7,7 +7,7 @@
     }
 
 .masthead {
-  position: fixed; //relative;
+  position: fixed; //relative; sets header to always on top
   top: 0;
   border-bottom: 1px solid $border-color;
   -webkit-animation: intro 0.3s both;
@@ -17,7 +17,7 @@
   z-index: 20;
   width: 100%;
   background-color: white;
-  height: $masthead-height;
+  height: auto; //$masthead-height; 
     
   &__inner-wrap {
     @include container;
