--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -74,6 +74,7 @@ $susy: (
 @import "sidebar";
 @import "print";
 @import "home";
+@import "publications";
 /*
    Bootstrap SASS http://veithen.github.io/2015/03/26/jekyll-bootstrap.html
    ========================================================================== 
