--- a/_includes/head.html
+++ b/_includes/head.html
@@ -19,7 +19,8 @@
 </script>
 
 <!-- For all browsers -->
-<link rel="stylesheet" href="{{ site.url }}/assets/css/main.css">
+<link rel="stylesheet" href="/assets/css/main.css">
+<!--<link rel="stylesheet" href="{{ site.url }}/assets/css/main.css">-->
 
 <!--[if lte IE 9]>
   <style>
