google site verification

--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -1,5 +1,8 @@
 <!-- start custom head snippets -->
 
+<!-- Google site verification -->
+<meta name="google-site-verification" content="G4sJV3jbXHLWVg7wpWtvW1SGHRHHLJRdTGSXrK0ZYzQ" />
+
 <!-- Google fonts -->
       <link href="https://fonts.googleapis.com/css?family=Lora|Playfair+Display:900|Roboto" rel="stylesheet">
 
