--- a/_sass/_archive.scss
+++ b/_sass/_archive.scss
@@ -2,6 +2,11 @@
    ARCHIVE-SINGLE-POSTS Custom
    ========================================================================== */
 
+.blog-meta{
+    display: inline-block !important;
+    margin-right: 10px;
+}
+
 /* ==========================================================================
    ARCHIVE
    ========================================================================== */
