--- a/_sass/_home.scss
+++ b/_sass/_home.scss
@@ -64,7 +64,7 @@ home {
     padding-right: 30px;
     text-align: justify;
     p {
-        font-size: 14px;
+        //font-size: 14px;
         text-indent: 20px;
     }
 }
