--- a/_sass/_page.scss
+++ b/_sass/_page.scss
@@ -23,11 +23,16 @@
     @include span(10 of 12 last);
     @include prefix(0.5 of 12);
     @include suffix(2 of 12);
-  }
-
+      .text-body {
+      p {
+          text-indent: $indent-var !important;
+          line-height: 1.9em !important;
+          margin-top: 1.2em !important;
+        }
+      }
+    }
   .page__inner-wrap {
     @include full();
-
     .page__content,
     .page__meta,
     .page__share {
@@ -63,16 +68,18 @@
 
   /* paragraph indents */
   p {
-    margin: 0 0 $indent-var;
-    margin-top: 1.4em;
-
-    /* sibling indentation*/
-    @if $paragraph-indent == true {
-      & + p {
-        text-indent: $indent-var;
-        margin-top: -($indent-var);
-      }
-    }
+    text-indent: $indent-var !important;
+    line-height: 2em !important;
+//    margin: 0 0 $indent-var;
+//    margin-top: 2em;
+//
+//    /* sibling indentation*/
+//    @if $paragraph-indent == true {
+//      & + p {
+//        text-indent: $indent-var;
+//        margin-top: -($indent-var);
+//      }
+//    }
   }
 
   a {
