--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -1,5 +1,7 @@
 <!-- start custom head snippets -->
 
+{% include analytics.html %}
+
 <!-- Google site verification -->
 <meta name="google-site-verification" content="G4sJV3jbXHLWVg7wpWtvW1SGHRHHLJRdTGSXrK0ZYzQ" />
 
