Change emoji source

--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -17,7 +17,8 @@
       <meta name="theme-color" content="#ffffff">
 
 <!--Emoji CSS from https://afeld.github.io/emoji-css/ -->
-      <link href="/assets/css/emoji.css" rel="stylesheet">
+<!--      <link href="/assets/css/emoji.css" rel="stylesheet">-->
+<link href="https://afeld.github.io/emoji-css/emoji.css" rel="stylesheet">
 
 <!-- Material Design Icons from http://zavoloklom.github.io/material-design-iconic-font/ -->
       <link href="/assets/css/material-design-iconic-font.min.css" rel="stylesheet">
