Minor style changes

--- a/_sass/_home.scss
+++ b/_sass/_home.scss
@@ -20,7 +20,7 @@ home {
 }
 .title {
     font-size: 50px !important;
-    font-weight: 900 !important;
+    font-weight: 800 !important;
     line-height: 120% !important;
 }
 .small {
@@ -87,7 +87,7 @@ home {
 }
 .home-icons{
     padding-left: 30px;
-    padding-right: 30px;
+//    padding-right: 30px;
     margin: auto;
     display: block;
     
