--- a/_sass/bootstrap/_list-group.scss
+++ b/_sass/bootstrap/_list-group.scss
@@ -12,6 +12,10 @@
   margin-bottom: 20px;
   padding-left: 0; // reset padding because ul and ol
 }
+.list-group-edit {
+    margin-bottom: -10px;
+    padding-left: 0;
+}
 
 
 // Individual list items
